[package]
name = "bsv58"
version = "0.1.0"
edition = "2024"
description = "Ultra-fast Base58 codec for Bitcoin SV (SIMD x86/ARM)"
license = "Open BSV"
repository = "https://github.com/murphsicles/bsv58"
keywords = ["base58", "bitcoin", "bsv", "codec"]
categories = ["cryptography::encoding"]

[lib]
name = "bsv58"
path = "src/lib.rs"

[dependencies]
sha2 = "0.10"  # For BSV checksum

[features]
default = []
simd = []  # Enable AVX2/NEON intrinsics (stable, runtime-detected)

[dev-dependencies]
base58 = "0.2"  # Control baseline (slower, generic)
bs58 = "0.5"  # Reference baseline (optimized target)
criterion = { version = "0.7", features = ["html_reports"] }  # For benchmarking
hex-literal = "1.1"  # For tests

[[bench]]
name = "bench"
harness = false
