# bsv58 — Zeta package metadata
# Rust version is maintained on the `rust` branch for crates.io publishing.
# This branch (`main`) contains the pure Zeta implementation.
# See README.md for more info.

[package]
name = "bsv58"
version = "0.2.0"
edition = "2024"
license-file = "LICENSE"
description = "Ultra-fast Base58 codec for Bitcoin SV — pure Zeta implementation"
repository = "https://github.com/murphsicles/bsv58"
keywords = ["base58", "bitcoin", "bsv", "codec"]
categories = ["cryptography", "encoding"]
readme = "README.md"
